# agenda_helper

./: .dockerignore  .env-example  .gitignore  .gitlab-ci.yml  Dockerfile  README.md  credentials-example.json  pyproject.toml  token-example.json
agenda_helper/: agenda_tool_calling.py  app.py
agenda_helper/utils/: agenda_authentication.py
tests/: test_entry_points.py  test_fastapi_views.py  test_template_module.py
